tests/syntax_error/missing_return_type_funcptr.jou
def foo(x: funcptr()) -> None:  # Error: return type of funcptr must be specified with '->'
    pass
